# SME1

./: .gitignore  README.md  RESEARCH_PLAN.md  RESEARCH_PROPOSAL_V2.md  gemm_mlir_kernel.c  执行流程说明.md  方案整理bak.md
01_custom_lifter/: Clang_AST提升器方案.md  MLIR说明文档.md  README.md  lift_gemm.py
01_custom_lifter/output/: gemm_fp32_affine.mlir  gemm_fp32_linalg.mlir
02_prefetch_cost_model/: CMakeLists.txt  README.md  analyze_prefetch.py
02_prefetch_cost_model/output/: 01_affine_analysis.mlir  prefetch_analysis.json  prefetch_analysis.md
02_prefetch_cost_model/passes/: PrefetchCostModel.cpp
03_prefetch_injection/: CMakeLists.txt  README.md  generic_op说明文档.md  inject_prefetch.py  vector预取注入说明.md
03_prefetch_injection/input/: linalg_to_vector_transform.mlir
03_prefetch_injection/output/: 01_vector.mlir  02_vector_prefetch.mlir  gemm_fp32_affine_prefetch.mlir
03_prefetch_injection/passes/: InjectResearchPrefetch.cpp  InjectVectorPrefetch.cpp
04_vector_arm_sme_llvm/: CMakeLists.txt  README.md  build_lowering_pipeline.py  mlir层级顺序关系说明.md  prefetch参数映射说明.md  输出文件内容说明.md
04_vector_arm_sme_llvm/input/: gemm_step4_compute_mainline.mlir  gemm_step4_pipeline.mlir
05_native_build_run/: README.md  build_and_run.py  native_harness.c  prefetch_harness.c  unified_harness.c  unified_wrapper.c
06_experiment_validation/: README.md  run_validation.py
07_local_benchmark/: README.md  affine_benchmark.c  build_and_benchmark.py  c_baseline_benchmark.c  unified_benchmark.c
custom_lifter/: README.md  lift_gemm.py
script/: README.md  analyze_transform_mlir.py
(+23 files in other folders)
